2005-0528  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: bumped GETTEXT_PACKAGE for evolution,
	  evolution-data-server, evolution-exchange.

2005-05-19  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* translation-status.xml: libgnomecanvas branched for gnome-2-10.
	  vino branched for gnome-2-10.

2005-05-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libwnck has been branched.

2005-05-12  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: gnome-desktop branched (gnome-2-10)

2005-05-08  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: seahorse branched seahorse-0-8 (stable)

2005-05-07  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* translation-status.xml: gnome-session branched for gnome-2-10.

2005-05-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: yelp has been branched.

2005-04-29  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Removed following quasi-dead modules:
	- gnome-backup: development effort is located somewhere else
	- gaby: no development change for 3 full years
	- gcm: declared stop of development by author
	- gturing: no development change for 2.5 years

2005-04-28  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Remove gnomoku, which has no development
	related changes for almost 3 yrs.

2005-04-26  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: dasher branched for gnome-2-10.

2005-04-26  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: gnopernicus branched for gnome-2-10.

2005-04-22  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: Change gossip to use the HEAD
	  branch.

2005-04-17  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: libgnomeui has been branched.

2005-04-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2005-04-14  Christian Rose  <menthos@menthos.com>
