@@ -2699,6 +2699,17 @@
       </component>
     </version>
   </module>
+  <module name="rcd">
+    <version release="HEAD">
+      <component name="rcd" dir="rcd" group="extras">
+        <podir dir="po"/>
+        <potname name="rcd.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="red-carpet">
     <version release="HEAD">
       <component name="red-carpet" dir="red-carpet" group="extras">
