@@ -1,4 +1,8 @@
-2005-0528  Funda Wang  <fundawang@linux.net.cn>
+2005-06-02  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added rcd.
+
+2005-05-28  Funda Wang  <fundawang@linux.net.cn>
 
 	* translation-status.xml: bumped GETTEXT_PACKAGE for evolution,
 	  evolution-data-server, evolution-exchange.
